some docker, jacoco and some tests